--- a/client/src/assets/css/chaseyourdreams.css
+++ b/client/src/assets/css/chaseyourdreams.css
@@ -4,10 +4,14 @@ h1, h2, h3, h4, h5, h6, p, a {
   font-family: "Noto Sans JP", "sans-serif";
 }
 
-a:link, a:visited {
+.nav-item a:link, .nav-item a:visited, .nav a:link, .nav a:visited {
   color: #ffffff !important
 }
 
-a:hover {
+a:link, a:visited {
+  color: #000000 !important
+}
+
+a:hover, .nav-item a:hover, .nav a:hover {
   color: #a8a8a8 !important
 }
